--- a/cadence/styles.css
+++ b/cadence/styles.css
@@ -729,6 +729,7 @@ textarea {
   justify-content: space-between;
   gap: 1rem;
   flex-wrap: wrap;
+  margin-bottom:1.25rem;
 }
 
 .song-click-track-info {
