--- a/cadence/styles.css
+++ b/cadence/styles.css
@@ -1306,6 +1306,8 @@ i{
   margin-right: 0px !important;
 }
 
-.person-menu-btn .fa-ellipsis-vertical{
+#btn-logout i,
+#btn-account-menu i,
+.person-menu-btn i {
   margin-right: 0px !important;
 }
